# app-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: camera_service.hpp  camera_task.hpp
app/src/: camera_service.cpp  camera_task.cpp
app/test/: CMakeLists.txt  camera_task_test.cpp
app/test/mock/: mock_camera.hpp  mock_communication.hpp  mock_queue.hpp  mock_timer.hpp
hw/: backup.tcl  gcu_wrapper.xsa
